--- a/src/app/components/9-admin-superUser/create-new-site/create-new-site.component.css
+++ b/src/app/components/9-admin-superUser/create-new-site/create-new-site.component.css
@@ -3,7 +3,11 @@
     height: 40px;
     vertical-align: bottom; 
 }
-
+.noticeBoardTable{
+    width: 80%;
+    height: 40px;
+    vertical-align: bottom; 
+}
 .col20 {
     width : 20%;
     background-color: lightgrey;
