--- a/src/app/components/9-admin-superUser/create-new-site/create-new-site.component.html
+++ b/src/app/components/9-admin-superUser/create-new-site/create-new-site.component.html
@@ -13,6 +13,7 @@
       <a class="nav-link" [ngClass]="{'active':selectedPage.charAt(0) === 'D'}" (click)='selectedPage="D0"'>Confirm</a>
     </li>
   </ul>
+
   <div *ngIf="selectedPage.charAt(0) === 'A'"> <!-- Basic Information -->
     <ul class="nav nav-tabs nav-fill basicNav">
       <li class="nav-item">
@@ -27,7 +28,6 @@
     </ul>
     <div class='mainform' *ngIf="selectedPage === 'A0'"> <!-- Site Information -->
       <h4>Basic Info Form</h4>
-      <br>
       <form [formGroup]="BasicSiteInfo">
         <div formGroupName="SiteDetails">
           <h3>Site Details</h3>
@@ -161,14 +161,127 @@
         </thead>
       </table>
     </div> <!-- Job Titles End -->
-
-
-
-
+    <div class="mainform" *ngIf="selectedPage === 'A2'"> <!-- Notice Board -->
+      <h4>Notice Board Sections</h4>
+      <p>This Is The Only Time You Will Be Able To Delete UnWanted Notice Board Sections</p>
+      <p>Every Department must have atleast one Section</p>
+      <table class="table table-responsive-lg" *ngFor="let dept of noticeboardSections; let d = index">
+        <thead class="thead-dark">
+          <tr>
+            <th class='noticeBoardTable'><h5>{{ dept.department }}</h5></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let sectionTitle of dept.title; let i = index">
+            <td class='noticeBoardTable'>{{ sectionTitle }}</td>
+            <td><button type="button" class="btn btn-outline-danger btn-sm" [disabled]='processing || dept.title.length==1' (click)='deleteSectionTitle(dept.department, i);'>Delete</button></td>
+          </tr>
+          <tr>
+            <td class='noticeBoardTable'>
+              <div class="form-group">
+                <input type="text" class="form-control" id="addJob" [class.is-invalid]='!!errorNBSection[d]'
+                placeholder="Add Noticeboard Section" [(ngModel)]="addNBSection[d]">
+                <small *ngIf='dept.title.length==1' class="form-text text-success">You must have atleast one section in each Department</small>
+                <small *ngIf='errorNBSection[d]' class="form-text text-danger">{{errorNBSection[d]}}</small>
+              </div>
+            <td>
+              <button type="button" class="btn btn-outline-success btn-sm" (click)='newNoticeboardTitle(dept.department, addNBSection[d]);'>Add</button>
+              <button *ngIf='errorNBSection[d]' type="button" class="btn btn-outline-secondary btn-sm" (click)='errorNBSection[d]=null; addNBSection[d]=null'>Clear</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div><!-- Notice Board End -->
   </div> <!-- Basic Information End -->
 
+  <div *ngIf="selectedPage.charAt(0) === 'B'"> <!-- Upload Images -->
+    <ul class="nav nav-tabs nav-fill uploadNav">
+      <li class="nav-item">
+        <a class="nav-link" [ngClass]="{'active':selectedPage.charAt(1) === '0'}" (click)='selectedPage="B0"'>Upload Images</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [ngClass]="{'active':selectedPage.charAt(1) === '1'}" (click)='selectedPage="B1"'>Select Site Image</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [ngClass]="{'active':selectedPage.charAt(1) === '2'}" (click)='selectedPage="B2"'>Select Welcome Display</a>
+      </li>
+    </ul>
+    <div class='mainform' *ngIf="selectedPage === 'B0'"> <!-- Upload Images -->
+      <h4>Upload Images</h4>
+    </div> <!-- Upload Images End -->
+    <div class='mainform' *ngIf="selectedPage === 'B1'"> <!-- Select Site Image -->
+      <h4>Select Site Image</h4>
+      
+    </div> <!-- Select Site Image End -->
+    <div class="mainform" *ngIf="selectedPage === 'B2'"> <!-- Select Welcome Display -->
+      <h4>Select Welcome Display</h4>
 
+    </div><!-- Select Welcome Display End -->
+  </div> <!-- Upload Images End -->
 
+  <div *ngIf="selectedPage.charAt(0) === 'C'"> <!-- Admin Rights -->
+    <ul class="nav nav-tabs nav-fill adminRightsNav">
+      <li class="nav-item">
+        <a class="nav-link" [ngClass]="{'active':selectedPage.charAt(1) === '0'}" (click)='selectedPage="C0"'>General Display</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [ngClass]="{'active':selectedPage.charAt(1) === '1'}" (click)='selectedPage="C1"'>General Employee</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [ngClass]="{'active':selectedPage.charAt(1) === '2'}" (click)='selectedPage="C2"'>Site Admin User</a>
+      </li>
+    </ul>
+    <div class='mainform' *ngIf="selectedPage === 'C0'"> <!-- General Display -->
+      <h4>General Display</h4>
+    </div> <!-- General Display End -->
+    <div class='mainform' *ngIf="selectedPage === 'C1'"> <!-- General Employee -->
+      <h4>General Employee</h4>
+      
+    </div> <!-- General Employee End -->
+    <div class="mainform" *ngIf="selectedPage === 'C2'"> <!-- Site Admin User -->
+      <h4>Site Admin User</h4>
 
+    </div><!-- Site Admin User End -->
+  </div> <!-- Admin Rights End -->
+
+  <div *ngIf="selectedPage.charAt(0) === 'D'"> <!-- Confirm Details & Save -->
+    <ul class="nav nav-tabs nav-fill basicNav">
+      <li class="nav-item">
+        <a class="nav-link" [ngClass]="{'active':selectedPage.charAt(1) === '0'}" (click)='selectedPage="D0"'>General Information</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [ngClass]="{'active':selectedPage.charAt(1) === '1'}" (click)='selectedPage="D1"'>Images</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [ngClass]="{'active':selectedPage.charAt(1) === '2'}" (click)='selectedPage="D2"'>Default User Pages</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [ngClass]="{'active':selectedPage.charAt(1) === '3'}" (click)='selectedPage="D3"'>Initials Settings</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [ngClass]="{'active':selectedPage.charAt(1) === '4'}" (click)='selectedPage="D4"'>Create</a>
+      </li>
+    </ul>
+    <div class='mainform' *ngIf="selectedPage === 'D0'"> <!-- General Information -->
+      <h4>General Information</h4>
+    </div> <!-- General Information End -->
+    <div class='mainform' *ngIf="selectedPage === 'D1'"> <!-- Images -->
+      <h4>Images</h4>
+      
+    </div> <!-- Images End -->
+    <div class="mainform" *ngIf="selectedPage === 'D2'"> <!-- Default User Pages -->
+      <h4>Default User Pages</h4>
+
+    </div><!-- Default User Pages End -->
+    <div class="mainform" *ngIf="selectedPage === 'D3'"> <!-- Initials Settings -->
+      <h4>Initials Settings</h4>
+
+    </div><!-- Initials Settings End -->
+    <div class="mainform" *ngIf="selectedPage === 'D4'"> <!-- Create -->
+      <h4>Create</h4>
+
+    </div><!-- Create End -->
+  </div> <!-- Confirm & Save End -->
 
 </div>
